--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
+feign.hystrix.enabled = true
+
 excel.filepath = C:/excels/
-plan.create.url = http://localhost:8081/plan/createMember
-plan.fetch.plan.detail.url = http://localhost:8081/plan/memberDetail/
+
+plan.fetch.plan.detail.url = http://localhost:8081/plan/planDetail/
